# internal/server/ogen/oas_operations_gen.go
@@ -6,20 +6,21 @@ package baldaapi
 type OperationName = string
 
 const (
-	AcceptEndGameOperation     OperationName = "AcceptEndGame"
-	AuthOperation              OperationName = "Auth"
-	CreateGameOperation        OperationName = "CreateGame"
-	CreateGameWithBotOperation OperationName = "CreateGameWithBot"
-	GetLeaderboardOperation    OperationName = "GetLeaderboard"
-	GetPlayerStateUIDOperation OperationName = "GetPlayerStateUID"
-	JoinGameOperation          OperationName = "JoinGame"
-	ListGamesOperation         OperationName = "ListGames"
-	LogoutOperation            OperationName = "Logout"
-	MoveGameOperation          OperationName = "MoveGame"
-	PingOperation              OperationName = "Ping"
-	ProposeEndGameOperation    OperationName = "ProposeEndGame"
-	RefreshTokenOperation      OperationName = "RefreshToken"
-	RejectEndGameOperation     OperationName = "RejectEndGame"
-	SignupOperation            OperationName = "Signup"
-	SkipGameOperation          OperationName = "SkipGame"
+	AcceptEndGameOperation         OperationName = "AcceptEndGame"
+	AuthOperation                  OperationName = "Auth"
+	CreateGameOperation            OperationName = "CreateGame"
+	CreateGameWithBotOperation     OperationName = "CreateGameWithBot"
+	GetLeaderboardOperation        OperationName = "GetLeaderboard"
+	GetPlayerAchievementsOperation OperationName = "GetPlayerAchievements"
+	GetPlayerStateUIDOperation     OperationName = "GetPlayerStateUID"
+	JoinGameOperation              OperationName = "JoinGame"
+	ListGamesOperation             OperationName = "ListGames"
+	LogoutOperation                OperationName = "Logout"
+	MoveGameOperation              OperationName = "MoveGame"
+	PingOperation                  OperationName = "Ping"
+	ProposeEndGameOperation        OperationName = "ProposeEndGame"
+	RefreshTokenOperation          OperationName = "RefreshToken"
+	RejectEndGameOperation         OperationName = "RejectEndGame"
+	SignupOperation                OperationName = "Signup"
+	SkipGameOperation              OperationName = "SkipGame"
 )
