# internal/server/ogen/oas_response_encoders_gen.go
@@ -235,6 +235,50 @@ func encodeGetLeaderboardResponse(response GetLeaderboardRes, w http.ResponseWri
 	}
 }
 
+func encodeGetPlayerAchievementsResponse(response GetPlayerAchievementsRes, w http.ResponseWriter, span trace.Span) error {
+	switch response := response.(type) {
+	case *PlayerAchievementsResponse:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(200)
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	case *GetPlayerAchievementsUnauthorized:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(401)
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	case *GetPlayerAchievementsInternalServerError:
+		w.Header().Set("Content-Type", "application/json; charset=utf-8")
+		w.WriteHeader(500)
+		span.SetStatus(codes.Error, http.StatusText(500))
+
+		e := new(jx.Encoder)
+		response.Encode(e)
+		if _, err := e.WriteTo(w); err != nil {
+			return errors.Wrap(err, "write")
+		}
+
+		return nil
+
+	default:
+		return errors.Errorf("unexpected response type: %T", response)
+	}
+}
+
 func encodeGetPlayerStateUIDResponse(response GetPlayerStateUIDRes, w http.ResponseWriter, span trace.Span) error {
 	switch response := response.(type) {
 	case *PlayerState:
